# noir-leans

./: .gitignore  CLAUDE.md  Creole-surnames.txt  README.md  italian_surnames.txt  main.py  map_prototype.py  pyproject.toml  report_methodical_20260419_181529.json  report_methodical_20260419_184306.json  step.py
agents/: extractor.py  personas.py  playthrough_agent.py  report.py  run.py
noir/: __init__.py  display.py  game.py  items.py  log.py  lore.py  map.py  neighborhoods.py  organizations.py  parser.py  recap.py  step.py  surnames.py  world.py
noir/audio/: __init__.py  ambient.py  queue_worker.py  tts.py
noir/cases/: manager.py  trial.py
noir/characters/: agent.py  companion.py  npc.py  npc_archetype_loader.py  npc_archetypes.json  psychology.py  skills.py
noir/data/: seeded_locations.json  world_context.txt  world_history.md  world_lore.json
noir/jobs/: archetypes.json  factions.py  generator.py
noir/llm/: __init__.py  _spinner.py  base.py  claude_cli.py  config.py  mock.py  ollama.py
noir/memory/: __init__.py  worker.py  (+2 more)
scripts/: gen_ambient.py  generate_locations.py
tests/: __init__.py  conftest.py  test_agent.py  test_agents.py  test_audio.py  test_auditor.py  test_bribes.py  test_cases.py  test_commands.py  test_factions.py  test_generator.py  test_items.py  test_jobs.py  test_llm.py  test_lore.py  test_map.py  test_memory.py  test_mystery.py  test_neighborhoods.py  test_npc_archetypes.py  test_onboarding.py  test_parser.py  test_persistence.py  test_psychology.py  test_recap.py  test_skills.py  test_step.py  test_world.py  test_world_lore.py
(+36 files in other folders)
