[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noir-detective"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jurigged>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
