[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noir-detective"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "terminaltexteffects>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jurigged>=0.5",
]
audio = [
    "kokoro-onnx>=0.4",
    "sounddevice>=0.5",
    "soundfile>=0.13",
]

[tool.setuptools.packages.find]
include = ["noir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
